--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
 
       <div class="navbar">
         <div class="navbar__left">
-          <img src="/Images/klenty-logo.png" alt="Logo" />
+          <img
+            src="https://drive.google.com/file/d/1EHJ6H18k8dSBq0R3YdMH_fc_FlVuzvVa/view?usp=sharing"
+            alt="Logo"
+          />
         </div>
         <div class="navbar__right">
           <button>Log in</button>
