--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="navbar">
         <div class="navbar__left">
           <img
-            src="https://drive.google.com/file/d/1EHJ6H18k8dSBq0R3YdMH_fc_FlVuzvVa/view?usp=sharing"
+            src="https://internshala.com/static/images/common/new_internshala_logo.svg"
             alt="Logo"
           />
         </div>
@@ -177,7 +177,7 @@
                     </p>
                   </div>
                   <div class="slider__one__bottom">
-                    <img src="/Images/terersa.png" alt="" />
+                    <img src="/Images/terersa.png" alt="Photo" />
                     <label>
                       <h5>Teresa Van Oerle</h5>
                       <p>Director of Business Development</p>
