--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="navbar">
         <div class="navbar__left">
           <img
-            src="https://internshala.com/static/images/common/new_internshala_logo.svg"
+            src="https://www.blogger.com/blog/post/edit/3230372736221648879/1064574395748696258#"
             alt="Logo"
           />
         </div>
