--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <div class="slider__one">
                   <div class="slider__one__top">
                     <img src="/Images/qoute-start.png" alt="" />
-                    <img src="/Images/company1.png" alt="" />
+                    <img src="https://ibb.co/v3FGjyT" alt="" />
                     <img src="/Images/qoute-end.png" alt="" />
                   </div>
                   <div class="slider__one__middle">
@@ -189,7 +189,7 @@
                 <div class="slider__two">
                   <div class="slider__two__top">
                     <img src="/Images/qoute-start.png" alt="" />
-                    <img src="/Images/company1.png" alt="" />
+                    <img src="https://ibb.co/v3FGjyT" alt="" />
                     <img src="/Images/qoute-end.png" alt="" />
                   </div>
                   <div class="slider__two__middle">
@@ -214,7 +214,7 @@
                 <div class="slider__three">
                   <div class="slider__three__top">
                     <img src="/Images/qoute-start.png" alt="" />
-                    <img src="/Images/company1.png" alt="" />
+                    <img src="https://ibb.co/v3FGjyT" alt="" />
                     <img src="/Images/qoute-end.png" alt="" />
                   </div>
                   <div class="slider__three__middle">
