--- a/index.html
+++ b/index.html
@@ -164,9 +164,18 @@
               <div class="carousel-item active">
                 <div class="slider__one">
                   <div class="slider__one__top">
-                    <img src="/Images/qoute-start.png" alt="" />
-                    <img src="https://ibb.co/v3FGjyT" alt="" />
-                    <img src="/Images/qoute-end.png" alt="" />
+                    <img
+                      src="https://github.com/YogeshAero07/KlentySoft-Assignment/blob/master/Images/Arrow_Next.svg"
+                      alt=""
+                    />
+                    <img
+                      src="https://github.com/YogeshAero07/KlentySoft-Assignment/blob/master/Images/company1.png"
+                      alt=""
+                    />
+                    <img
+                      src="https://github.com/YogeshAero07/KlentySoft-Assignment/blob/master/Images/Arrow_Prev.svg"
+                      alt=""
+                    />
                   </div>
                   <div class="slider__one__middle">
                     <p>
@@ -177,7 +186,10 @@
                     </p>
                   </div>
                   <div class="slider__one__bottom">
-                    <img src="/Images/terersa.png" alt="Photo" />
+                    <img
+                      src="https://github.com/YogeshAero07/KlentySoft-Assignment/blob/master/Images/terersa.png"
+                      alt="Photo"
+                    />
                     <label>
                       <h5>Teresa Van Oerle</h5>
                       <p>Director of Business Development</p>
@@ -188,9 +200,18 @@
               <div class="carousel-item">
                 <div class="slider__two">
                   <div class="slider__two__top">
-                    <img src="/Images/qoute-start.png" alt="" />
-                    <img src="https://ibb.co/v3FGjyT" alt="" />
-                    <img src="/Images/qoute-end.png" alt="" />
+                    <img
+                      src="https://github.com/YogeshAero07/KlentySoft-Assignment/blob/master/Images/Arrow_Next.svg"
+                      alt=""
+                    />
+                    <img
+                      src="https://github.com/YogeshAero07/KlentySoft-Assignment/blob/master/Images/company1.png"
+                      alt=""
+                    />
+                    <img
+                      src="https://github.com/YogeshAero07/KlentySoft-Assignment/blob/master/Images/Arrow_Prev.svg"
+                      alt=""
+                    />
                   </div>
                   <div class="slider__two__middle">
                     <p>
@@ -202,7 +223,10 @@
                     </p>
                   </div>
                   <div class="slider__two__bottom">
-                    <img src="/Images/alex.png" alt="" />
+                    <img
+                      src="https://github.com/YogeshAero07/KlentySoft-Assignment/blob/master/Images/alex.png"
+                      alt=""
+                    />
                     <label>
                       <h5>Tin</h5>
                       <p>Director of Business growth</p>
@@ -213,9 +237,18 @@
               <div class="carousel-item">
                 <div class="slider__three">
                   <div class="slider__three__top">
-                    <img src="/Images/qoute-start.png" alt="" />
-                    <img src="https://ibb.co/v3FGjyT" alt="" />
-                    <img src="/Images/qoute-end.png" alt="" />
+                    <img
+                      src="https://github.com/YogeshAero07/KlentySoft-Assignment/blob/master/Images/Arrow_Next.svg"
+                      alt=""
+                    />
+                    <img
+                      src="https://github.com/YogeshAero07/KlentySoft-Assignment/blob/master/Images/company1.png"
+                      alt=""
+                    />
+                    <img
+                      src="https://github.com/YogeshAero07/KlentySoft-Assignment/blob/master/Images/Arrow_Prev.svg"
+                      alt=""
+                    />
                   </div>
                   <div class="slider__three__middle">
                     <p>
@@ -227,7 +260,10 @@
                     </p>
                   </div>
                   <div class="slider__three__bottom">
-                    <img src="/Images/Brandon.png" alt="" />
+                    <img
+                      src="https://github.com/YogeshAero07/KlentySoft-Assignment/blob/master/Images/Brandon.png"
+                      alt=""
+                    />
                     <label>
                       <h5>FIN</h5>
                       <p>Director of Development</p>
