--- a/index.html
+++ b/index.html
@@ -165,15 +165,15 @@
                 <div class="slider__one">
                   <div class="slider__one__top">
                     <img
-                      src="https://github.com/YogeshAero07/KlentySoft-Assignment/blob/master/Images/Arrow_Next.svg"
+                      src="https://1.bp.blogspot.com/-unGMX6GYvk8/YSvtgrxt5cI/AAAAAAAAUtY/2MBfK0xMD6kBfgEKj_o2m5UDMvwrtzL1wCLcBGAsYHQ/s0/qoute-start.png"
                       alt=""
                     />
                     <img
-                      src="https://github.com/YogeshAero07/KlentySoft-Assignment/blob/master/Images/company1.png"
+                      src="https://1.bp.blogspot.com/-27-31m2QY9k/YSvtCWvhyhI/AAAAAAAAUtI/zoL0YRsE4lQ6zrYsX7trGo6cL9z7WiWuwCLcBGAsYHQ/s0/company1.png"
                       alt=""
                     />
                     <img
-                      src="https://github.com/YogeshAero07/KlentySoft-Assignment/blob/master/Images/Arrow_Prev.svg"
+                      src="https://1.bp.blogspot.com/-ul89EqZk6NY/YSvtgGutlAI/AAAAAAAAUtU/tMirCgurCucT9c1Nkfm70y_WgSVDCBQagCLcBGAsYHQ/s0/qoute-end.png"
                       alt=""
                     />
                   </div>
@@ -187,7 +187,7 @@
                   </div>
                   <div class="slider__one__bottom">
                     <img
-                      src="https://github.com/YogeshAero07/KlentySoft-Assignment/blob/master/Images/terersa.png"
+                      src="https://1.bp.blogspot.com/-eJytbLUfnOo/YSvtiFl2AYI/AAAAAAAAUtg/xyiB6LRCbeY2wihocGK3cfbPDNIi9IIyQCLcBGAsYHQ/s0/terersa.png"
                       alt="Photo"
                     />
                     <label>
@@ -201,15 +201,15 @@
                 <div class="slider__two">
                   <div class="slider__two__top">
                     <img
-                      src="https://github.com/YogeshAero07/KlentySoft-Assignment/blob/master/Images/Arrow_Next.svg"
+                      src="https://1.bp.blogspot.com/-unGMX6GYvk8/YSvtgrxt5cI/AAAAAAAAUtY/2MBfK0xMD6kBfgEKj_o2m5UDMvwrtzL1wCLcBGAsYHQ/s0/qoute-start.png"
                       alt=""
                     />
                     <img
-                      src="https://github.com/YogeshAero07/KlentySoft-Assignment/blob/master/Images/company1.png"
+                      src="https://1.bp.blogspot.com/-27-31m2QY9k/YSvtCWvhyhI/AAAAAAAAUtI/zoL0YRsE4lQ6zrYsX7trGo6cL9z7WiWuwCLcBGAsYHQ/s0/company1.png"
                       alt=""
                     />
                     <img
-                      src="https://github.com/YogeshAero07/KlentySoft-Assignment/blob/master/Images/Arrow_Prev.svg"
+                      src="https://1.bp.blogspot.com/-ul89EqZk6NY/YSvtgGutlAI/AAAAAAAAUtU/tMirCgurCucT9c1Nkfm70y_WgSVDCBQagCLcBGAsYHQ/s0/qoute-end.png"
                       alt=""
                     />
                   </div>
@@ -224,7 +224,7 @@
                   </div>
                   <div class="slider__two__bottom">
                     <img
-                      src="https://github.com/YogeshAero07/KlentySoft-Assignment/blob/master/Images/alex.png"
+                      src="https://1.bp.blogspot.com/-LMJA6wf84Us/YSvtghPyhFI/AAAAAAAAUtc/KEp5mf1xSe4iDIWv_d5LqDtd1OrJLQIqgCLcBGAsYHQ/s0/alex.png"
                       alt=""
                     />
                     <label>
@@ -238,15 +238,15 @@
                 <div class="slider__three">
                   <div class="slider__three__top">
                     <img
-                      src="https://github.com/YogeshAero07/KlentySoft-Assignment/blob/master/Images/Arrow_Next.svg"
+                      src="https://1.bp.blogspot.com/-unGMX6GYvk8/YSvtgrxt5cI/AAAAAAAAUtY/2MBfK0xMD6kBfgEKj_o2m5UDMvwrtzL1wCLcBGAsYHQ/s0/qoute-start.png"
                       alt=""
                     />
                     <img
-                      src="https://github.com/YogeshAero07/KlentySoft-Assignment/blob/master/Images/company1.png"
+                      src="https://1.bp.blogspot.com/-27-31m2QY9k/YSvtCWvhyhI/AAAAAAAAUtI/zoL0YRsE4lQ6zrYsX7trGo6cL9z7WiWuwCLcBGAsYHQ/s0/company1.png"
                       alt=""
                     />
                     <img
-                      src="https://github.com/YogeshAero07/KlentySoft-Assignment/blob/master/Images/Arrow_Prev.svg"
+                      src="https://1.bp.blogspot.com/-ul89EqZk6NY/YSvtgGutlAI/AAAAAAAAUtU/tMirCgurCucT9c1Nkfm70y_WgSVDCBQagCLcBGAsYHQ/s0/qoute-end.png"
                       alt=""
                     />
                   </div>
@@ -261,7 +261,7 @@
                   </div>
                   <div class="slider__three__bottom">
                     <img
-                      src="https://github.com/YogeshAero07/KlentySoft-Assignment/blob/master/Images/Brandon.png"
+                      src="https://1.bp.blogspot.com/-djGCFi5Bd1M/YSvtfVrDwaI/AAAAAAAAUtQ/iRpl9CRwMK0us5-UcdpN8H7MUkwWDztSACLcBGAsYHQ/s0/Brandon.png"
                       alt=""
                     />
                     <label>
@@ -280,7 +280,9 @@
               id="prev__button"
             >
               <span class="carousel-control-prev-icon" aria-hidden="true"
-                ><img src="/Images/Arrow 6.svg" alt=""
+                ><img
+                  src="https://1.bp.blogspot.com/-BrMXqv-5jEk/YSvt8wrD-9I/AAAAAAAAUt0/SFkI1aZdtSc6Q8lzt0aqW9HdFZVIzF31QCLcBGAsYHQ/s0/Arrow_Prev.png"
+                  alt=""
               /></span>
               <span class="sr-only">Previous</span>
             </a>
@@ -292,7 +294,9 @@
               id="next__button"
             >
               <span class="carousel-control-next-icon" aria-hidden="true"
-                ><img src="/Images/Arrow 5.svg" alt=""
+                ><img
+                  src="https://1.bp.blogspot.com/-bSUoAausmHU/YSvt89Fm4JI/AAAAAAAAUtw/3T1mcdpLWdQu2ACo3zrSx8YF04V85zfigCLcBGAsYHQ/s0/Arrow_Next.png"
+                  alt=""
               /></span>
               <span class="sr-only">Next</span>
             </a>
